# TraceRayer

./: CMakeLists.txt  COPYING  LICENSE  LICENSE.LGPL-2.1  README.md  main.c
IO/: Arguments.c  Logging.c  Path.c
Include/: Arguments.h  InitGUID.h  Logging.h  Object.h  Path.h  Signal.h  Statics.h  Types.h
Include/Application/: ActivationLoop.hpp  Application.h
Include/COM/: comptr.hpp
Include/Core/: ActivationLoop.h  ActivationLoop.hpp  WindowLoop.h
Include/Core/Async/: AsyncAwaiter.hpp  AsyncInfo.h  AsyncOperation.h  AsyncOperationCompletedHandlerDefault.h  AsyncState.h
Include/Core/Splash/: SplashWindow.h  SplashWindow.hpp
Include/Core/Vector/: Vector.h
Include/Core/Vulkan/: Vulkan.h  VulkanDevice.h
Include/IO/: Arguments.h  FetchResources.h  Logging.h  Path.h
Include/UI/: GTK.h  GTKWidget.h  GTKWindow.h  Representation.h  UI.h
Include/UI/GTK/: GTK.h  GTKBox.h  GTKDrawingArea.h  GTKImage.h  GTKLabel.h  GTKOverlay.h  GTKPicture.h  GTKSpinner.h  GTKWidget.h  GTKWindow.h  GTKWindowHandle.h
Include/UI/Window/: GTKWindow.h
Source/Application/: ActivationLoop.cpp  Application.cpp
Source/Application/Splash/: SplashWindow.cpp
Source/Core/: ActivationLoop.c  ActivationLoop.cpp  Application.cpp  WindowLoop.c
Source/Core/Async/: AsyncInfo.c  AsyncOperation.c  AsyncOperationCompletedHandlerDefault.c  AsyncState.c
Source/Core/Splash/: SplashWindow.c  SplashWindow.cpp
Source/Core/Vulkan/: Vulkan.c  VulkanDevice.c
Source/IO/: Arguments.c  FetchResources.c  Logging.c  Path.c
Source/UI/: GTK.c  GTKWidget.c  GTKWindow.c
Source/UI/GTK/: GTK.c  GTKBox.c  GTKDrawingArea.c  GTKImage.c  GTKLabel.c  GTKOverlay.c  GTKPicture.c  GTKSpinner.c  GTKWidget.c  GTKWindow.c  GTKWindowHandle.c
Source/UI/Window/: GTKWindow.c
UI/: GTK.c  GTKWidget.c
UI/Window/: GTKWindow.c
